@@ -82,3 +82,4 @@
 ( cvs diff -u -r 1.2.2.58 -r 1.2.2.59 src/vcal_folder.c;  ) > 1.93.0cvs4.patchset
 ( cvs diff -u -r 1.2.2.50 -r 1.2.2.51 src/vcalendar.c;  ) > 1.93.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.53 -r 1.1.2.54 src/vcal_meeting_gtk.c;  ) > 1.93.0cvs6.patchset
+( cvs diff -u -r 1.1.2.54 -r 1.1.2.55 src/vcal_meeting_gtk.c;  ) > 1.93.0cvs7.patchset
