@@ -1,3 +1,8 @@
+2007-02-05 [colin]	1.93.0cvs7
+
+	* src/vcal_meeting_gtk.c
+		Better time selection
+
 2007-02-04 [colin]	1.93.0cvs6
 
 	* src/vcal_meeting_gtk.c
